RESOLVED FIXED50700
Fix some clang++ warnings (one of which was an actual bug)
https://bugs.webkit.org/show_bug.cgi?id=50700
Summary Fix some clang++ warnings (one of which was an actual bug)
Anders Carlsson
Reported 2010-12-08 10:57:55 PST
Fix some clang++ warnings (some of which were actual bugs)
Attachments
Patch (3.34 KB, patch)
2010-12-08 12:55 PST, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2010-12-08 12:55:42 PST
Darin Adler
Comment 2 2010-12-08 13:02:44 PST
Comment on attachment 75949 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=75949&action=review > WebCore/page/mac/DragControllerMac.mm:57 > + if (!m_documentUnderMouse || (![[m_page->mainFrame()->view()->getOuterView() window] attachedSheet] > + && [dragData->platformData() draggingSource] != m_page->mainFrame()->view()->getOuterView())) This one was not a bug. You should not call it a bug in the change log. > WebCore/page/mac/EventHandlerMac.mm:762 > + if (applicationIsSafari() && (document->url().protocolIs("feed") || document->url().protocolIs("feeds"))) This one was!
Anders Carlsson
Comment 3 2010-12-08 13:31:05 PST
Note You need to log in before you can comment on or make changes to this bug.