Fix some clang++ warnings (one of which was an actual bug) https://bugs.webkit.org/show_bug.cgi?id=50700

Reviewed by Darin Adler.

* page/mac/DragControllerMac.mm:
(WebCore::DragController::dragOperation):
Add parentheses to silent a clang warning.

* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::needsKeyboardEventDisambiguationQuirks):
Fix || vs && precedence bug uncovered by clang.

* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::reshape):
Use an early return to avoid a warning.

Canonical link: https://commits.webkit.org/63953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73543 268f45cc-cd09-0410-ab3c-d52691b4dbfc